sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:6: error: not found: value min
    min = i
    ^AlgSelectionSort:9: error: not found: value min
        min= j 
        ^